# labforge

./: .dockerignore  .gitignore  Makefile  auth-sample.env  cluster-sample.env  deployment-sample.env  docker-sample.env  frontend-sample.env  kroki-sample.env
api-service-template/: CHANGELOG.md  Makefile  README.md  package.yaml  stack.yaml
api-service-template/deployment/: Dockerfile
api-service-template/src/: App.hs  Config.hs  Init.hs
auth-service/: CHANGELOG.md  Makefile  auth-service.cabal  package.yaml  stack.yaml
cluster-manager/: CHANGELOG.md  Makefile  cluster-manager.cabal  package.yaml  stack.yaml
deployment/: Dockerfile  db-script.sh  docker-compose.yml  prod.docker-compose.yml
deployment-api/: CHANGELOG.md  Makefile  README.md  deployment-api.cabal  package.yaml  stack.yaml
frontend/: Makefile
frontend-server/: CHANGELOG.md  Makefile  README.md  frontend-server.cabal  package.yaml  stack.yaml
install/: admin_init.sh  ca.sh  fillenv.sh  keycloak.sh  nginx.sh
kroki-proxy/: CHANGELOG.md  Makefile  README.md  kroki-proxy.cabal  package.yaml  stack.yaml
labforge-docs/: Makefile  mkdocs.yml  pyproject.toml
labforge-docs/docs/: index.md
labforge-docs/docs/install-guide/: index.md  postinstall.md  requirements.md
labforge-docs/docs/usage-guide/: deployment-templates.md
labforge-docs/docs/user-guide/: index.md
rabbitmq-pool-template/: CHANGELOG.md  README.md  package.yaml  stack.yaml
single-vnc-page/: Makefile  package.json  vite.config.ts
templates/: api-service-template.hsfiles  rabbitmq-pool-template.hsfiles
(+81 files in other folders)
